--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>My Resume</h1>
-    <img src="./profile_pic/decea8eb-1f83-4812-b2b7-e79e67fe0270.jpg" height="200px" alt="Profilephoto">
+    <img src="./" height="200px" alt="Profilephoto">
     <h2>Summary</h2>
     <p>I have completed my graduation with B.Com, now I'm learning Web Development online.</p>
     <h2>Education</h2>
